# rosc_simple_gesture

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
launch/: gesture.launch  gesture.launch~
scripts/: audio_feedback.py  audio_feedback.py~  control.py  control.py~  extract_hand.py  extract_hand.py~  filter.py  filter.py~
